// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUploadIcon should match snapshot when disabled 1`] = `
<DocumentFragment>
  <label
    class="flex items-center justify-center  text-white font-bold px-2 rounded cursor-pointer"
    tabindex="0"
  >
    <input
      accept="image/*, .pdf, .html, .xml, .docx, .txt, .yml, .yaml, .tsx, .ts, .js, .cjs, .coffee, .css, .scss, .sass, less, .xsl, .xlsx,  .jsx, .java, .py, .php, .rb, .erb, .rake, .slim, .cpp, .c, .go, .rs, .log, .cjs, .snap, .sh, .md, .csv, .html, .json, .toml, .sh,  .map,  .xml, .lock, .mod, .metal, .sum, .h, .m, .asp, .net, .dll, .cs, .vb, .fs, .config, .resx, .csproj, .sln"
      aria-label="Upload file"
      style="display: none;"
      type="none"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-paperclip"
      fill="none"
      height="26"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="background: rgb(250, 250, 251); cursor: pointer; color: rgb(44, 46, 47); border: 1px solid #d7dadf;"
      viewBox="0 0 24 24"
      width="26"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l8.57-8.57A4 4 0 1 1 18 8.84l-8.59 8.57a2 2 0 0 1-2.83-2.83l8.49-8.48"
      />
    </svg>
  </label>
</DocumentFragment>
`;

exports[`FileUploadIcon should match snapshot when enabled 1`] = `
<DocumentFragment>
  <label
    class="flex items-center justify-center  text-white font-bold px-2 rounded cursor-pointer"
    tabindex="0"
  >
    <input
      accept="image/*, .pdf, .html, .xml, .docx, .txt, .yml, .yaml, .tsx, .ts, .js, .cjs, .coffee, .css, .scss, .sass, less, .xsl, .xlsx,  .jsx, .java, .py, .php, .rb, .erb, .rake, .slim, .cpp, .c, .go, .rs, .log, .cjs, .snap, .sh, .md, .csv, .html, .json, .toml, .sh,  .map,  .xml, .lock, .mod, .metal, .sum, .h, .m, .asp, .net, .dll, .cs, .vb, .fs, .config, .resx, .csproj, .sln"
      aria-label="Upload file"
      style="display: none;"
      type="file"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-paperclip"
      fill="none"
      height="26"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      style="background: rgb(250, 250, 251); cursor: pointer; color: rgb(44, 46, 47); border: 1px solid #d7dadf;"
      viewBox="0 0 24 24"
      width="26"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l8.57-8.57A4 4 0 1 1 18 8.84l-8.59 8.57a2 2 0 0 1-2.83-2.83l8.49-8.48"
      />
    </svg>
  </label>
</DocumentFragment>
`;
